Updated the Makefiles, interim check-in.

--- a/tex/seq64_concepts.tex
+++ b/tex/seq64_concepts.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-11-01
-% \update      2018-08-25
+% \update      2018-09-21
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -52,6 +52,13 @@
             sequences arm/unarm depending on the layout of the
             sequences and triggers in the piano roll of the Song Editor.
    \end{itemize}
+
+\subsubsection{Concepts / Terms / bank}
+\label{subsubsec:concepts_terms_bank}
+
+   \index{bank}
+   See \sectionref{subsubsec:concepts_terms_screen_set}.
+   This term is \textsl{Kepler34}'s name for "screen set".
 
 \subsubsection{Concepts / Terms / buss (bus)}
 \label{subsubsec:concepts_terms_buss}
@@ -228,8 +235,8 @@
    Patterns panel.
    \textsl{Sequencer64} supports multiple screens sets, up to 32 of them,
    and a name can be given to each for clarity.
-   Some day \textsl{Sequencer64} will support an 8x8 grid and 64 patterns per
-   screen set.
+   The Gtkmm-2.4 version of \textsl{Sequencer64}
+   supports an 8x8 grid and 64 patterns per screen set.
 
 \subsubsection{Concepts / Terms / bank}
 \label{subsubsec:concepts_terms_bank}
