--- a/tex/seq64_patterns_panel.tex
+++ b/tex/seq64_patterns_panel.tex
@@ -118,7 +118,7 @@
    the \textbf{Song Editor} does not have the focus of the application.
    However, if the \textbf{Song Editor} does have focus, it overrides this
    button, to preserve expected behavior.
-   There is also a configurable hotkey associated with it,
+   There is also a configurable hot-key associated with it,
    which defaults to \texttt{F1}, and is configurable in the "rc" file and
    the \textbf{File / Options / Ext Keys} page.
 
@@ -130,7 +130,7 @@
    The next click will then unmute only those tracks.
    Because it can be confusing, this button is disabled (not shown
    in the figure) in Song mode.
-   There is also a configurable hotkey associated with it, called
+   There is also a configurable hot-key associated with it, called
    \textbf{Toggle mutes},
    which defaults to \texttt{F8}, and is configurable in the "rc" file and
    the \textbf{File / Options / Ext Keys} page.
@@ -138,9 +138,9 @@
    \itempar{Toggle Menu}{pattern!toggle menu}
    \index{pattern!toggle menu}
    This button enables and disables the main menu of the main window.
-   Disabling it allows additional hotkeys to be used without calling forth menu
+   Disabling it allows additional hot-key to be used without calling forth menu
    entries.
-   There is also a configurable hotkey associated with it, called
+   There is also a configurable hot-key associated with it, called
    \textbf{Menu mode},
    which defaults to \texttt{F3}, and is configurable in the "rc" file and
    the \textbf{File / Options / Ext Keys} page.
@@ -588,9 +588,9 @@
    \index{keys!-}
    \index{keys!event edit}
    A new feature is hitting the equals ("=") key, then hitting
-   a pattern shortcut key (hotkey), to bring up a new sequence or edit an
+   a pattern shortcut key (hot-key), to bring up a new sequence or edit an
    existing one in a pattern editor.  Another new feature is hitting the minus
-   ("-") key, then the hotkey, to bring up the event editor.  The
+   ("-") key, then the hot-key, to bring up the event editor.  The
    configuration file settings for the the '=' and
    '-' keys can be altering in the \textbf{File / Options / Keyboard} tab.
 
@@ -690,7 +690,7 @@
          such as "4/4" or "3/4".  The first number is the beats-per-measure,
          and the second is the size of the beat, here, a quarter note.
       \item \textbf{Shortcut Key}.
-         If the display of shortcut keys is enabled (see
+         If the display of hot-keys is enabled (see
          \sectionref{paragraph:seq64_menu_file_options_keyboard}),
          then the key noted in the lower-right corner of the pattern can be
          pressed to toggle the mute/unmute status of that pattern.
@@ -787,7 +787,7 @@
    \index{keys!=}
    \index{keys!pattern edit}
    Another way to bring up a pattern in the pattern editor is to
-   click the \textbf{equal} key and then the pattern's shortcut key.
+   click the \textbf{equal} key and then the pattern's hot-key.
    For example, "\textbf{= q}" will open up the editor for the pattern with the
    hot-keys \textbf{= q}.
    The Equals key (\texttt{=}) is the default key that does this action.
@@ -809,7 +809,7 @@
    \index{keys!-}
    \index{keys!event edit}
    Another way to bring up a pattern in the event editor is to
-   click the \textbf{minus} key and then the pattern's shortcut key.
+   click the \textbf{minus} key and then the pattern's hot-key.
    For example, "\textbf{- q}" will open up the event editor for that pattern.
    The Minus key (\texttt{-}) is the default key that does this action.
    This key can be changed by modifying the
@@ -989,7 +989,7 @@
    associated with it.
 
    \index{keys!pattern toggles}
-   For each pattern, hitting its assigned shortcut key will
+   For each pattern, hitting its assigned hot-key will
    also toggle its status between muted/unmuted (armed/unarmed).
    Below is the default grid that is
    mapped to the loops/patterns on the screen set.
