--- a/tex/sequencer64-user-manual.tex
+++ b/tex/sequencer64-user-manual.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-11-01
-% \update      2018-09-16
+% \update      2018-09-30
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -80,12 +80,7 @@
 \label{sec:introduction}
 
    This document describes \textsl{Sequencer64}
-   \cite{sequencer64}, through version 0.96.0,
-   which is not yet official.  To get it, check out
-   the latest commit from the \textbf{playlist} branch.
-%  the latest commit from the \textbf{master} branch.
-   If one is impatient to get started mastering \textsl{Sequencer64},
-   lhen proceed to \sectionref{subsec:introduction_lets_get_started}.
+   \cite{sequencer64}, through version 0.96.0.
    The following projects support \textsl{Sequencer64}:
 
    \begin{itemize}
@@ -94,36 +89,38 @@
       \item \url{https://github.com/ahlstromcj/sequencer64-packages.git}.
    \end{itemize}
 
+   If impatient to get started mastering \textsl{Sequencer64},
+   proceed to \sectionref{subsec:introduction_lets_get_started}.
+   Otherwise, read about the new features of \textsl{Sequencer64}
+   relative to \textsl{Seq24}.
+
    \textsl{Sequencer64} adds native JACK MIDI support,
    fixes bugs in JACK transport, MIDI clocking,
-   JACK Master mode (via code from the \textsl{SooperLooper} 
-   and \textsl{Seq32} projects), an additional \textsl{Qt 5} user-interface for
-   Linux and for Window, a daemon mode, and play-list support with MIDI control.
-   However, as user \textsl{stazed} notes on GitHub, there is more that can be
-   done (and he has done much with his \textsl{seq32} \cite{seq32} project).
-
-   New features make song editing faster.
-   There is now a Pause button/keystroke.
-   More editing and navigation can be done using keystrokes.
-   The armed/mute status of all of the \textsl{other} active patterns can be
-   toggled.
+   JACK Master mode,
+%  an additional \textsl{Qt 5} user-interface for Linux and for Windows,
+   a daemon mode, play-list support with MIDI control,
+   and more.
+   \textsl{Sequencer64} can also be build to run as a "headless" application,
+   from the command-line or as a Linux daemon, controlled via MIDI control.
+%  There is a Pause button/keystroke.
+   More editing and navigation can be done using keystrokes,
+   for faster editing.
+%  The armed/mute status of all of the \textsl{other} active patterns can be
+%  toggled.
    There are zoom keys for the editors, current-sequence highlighting,
-   important bug fixes, some optimization, and much more.
-
-   With version 0.95.0, \textsl{Sequencer64} supports the
-   \textsl{Microsoft Windows} operating system.  This support was achieved by
-   incorporating a modified and stripped-down version of PortMidi and by
+   important bug fixes, and some optimization.
+   With version 0.95.0, \textsl{Sequencer64} supports
+   \textsl{Microsoft Windows}, via 
+   a modified version of PortMidi and by
    adopting and extending the \textsl{Qt 5} user-interface of the
    \textsl{Kepler34} project (\cite{kepler34}).
-   The \textsl{Qt 5} interface has been greatly improved in version
-   0.96.0, but there's still a small amount of catching up to do.
-   We intend to make the \textsl{Qt 5} interface comparable to the
-   \textsl{Gtkmm-2.4} interface in the 0.95 series, develop the two
-   versions in parallel for awhile, and ultimately standardize on
-   \textsl{Qt 5}.
+%  We intend to make the \textsl{Qt 5} interface comparable to the
+%  \textsl{Gtkmm-2.4} interface in the 0.95 series, develop the two
+%  versions in parallel for awhile, and ultimately standardize on
+%  \textsl{Qt 5}, as it seems to be a bit more portable than Gtkmm-3.
    See \sectionref{sec:qt_portmidi}, right away, if \textsl{Qt 5} and
    \textsl{Windows} support excites you.
-   Please note that support for \textsl{Mac OSX} should be almost automatic,
+   Please note that support for \textsl{Mac OSX} should be easy now,
    but we need help on that support, since we do not have a \textsl{Mac}.
 
    We have many contributors to acknowledge.  Please see
@@ -134,36 +131,37 @@
 
    \textsl{Sequencer64} is an reboot of \textsl{Seq24},
    a live-looping sequencer with an interface more like a hardware sequencer
-   than the typical software MIDI sequencer.
+   than track-based MIDI sequencers.
    \textsl{Seq24} was a very active project, with a
    number of contributors, who created patches, additional
-   functionality, and even ports to Windows.
+   functionality, and ports to Windows.
    We searched for these updates, and
    incorporated them into \textsl{Sequencer64} where feasible.
 
    \textsl{Sequencer64} is not a synthesizer.  It requires a hardware
    synthesizer, or a software synthesizer such as Timidity \cite{timidity},
-   FluidSynth \cite{fluidsynth}, ZynAddSubFX \cite{zynaddsubfx}, Yoshimi
-   \cite{yoshimi} \cite{yoshimi2}, or the Windows built-in
-   GS wave-table synthesizer.
-   See \cite{linuxsynths} for a long list of "Linux" synthesizers.
+   FluidSynth \cite{fluidsynth}, or
+%  , ZynAddSubFX \cite{zynaddsubfx}, Yoshimi
+%  \cite{yoshimi} \cite{yoshimi2}, or
+   the Windows built-in GS wave-table synthesizer.
+%  See \cite{linuxsynths} for a list of "Linux" synthesizers.
 
    \textsl{Sequencer64}, like \textsl{Seq24},
-   works a bit like an \textsl{Alesis SR16} drum machine,
+   works like an \textsl{Alesis SR16} drum machine,
    which, for some, is a very intuitive and fast way to do MIDI.
    If one has worked with trackers like \textsl{SoundTracker} and
    \textsl{ShakeTracker}, then "you are a tracker guy and it gonna go fast".
    With \textsl{Sequencer64}, one creates several patterns, and then
-   combines them.  They can be layed out as a song, and exported to a standard
-   MIDI file.
+   combines them.  They can be layed out as a performance,
+   and exported to a standard MIDI file.
 
-   Unfortunately, \textsl{Seq24} spent some time in limbo
+   \textsl{Seq24} spent some time inactive
    (2010 was the last major update, with a
    recent update to fix a MIDI clock issue).  There are a number of
    forks for it on \textsl{GitHub}, and some conversions
    to code in other languages, and some patches.
    There is also a Gtkmm port to Windows.
-   So, why would we bother creating yet another fork of \textsl{Seq24}?
+   So, why bother creating yet another fork of \textsl{Seq24}?
 
 \subsection{Sequencer64: Why?}
 \label{subsec:introduction_seq64_vs_others}
@@ -187,172 +185,146 @@
 \subsection{Improvements}
 \label{subsec:improvements}
 
-   The following improvements have been made to \textsl{Seq24} for
+   The following improvements are just some that have been made in
    \textsl{Sequencer64}.
 
    \begin{itemize}
       \item Native JACK MIDI support!  At last!
-      \item Tempo events are now supported, recordable, and editable.
-         The first track (or a configurable track) serves as a "tempo track".
+      \item Tempo events are recordable and editable, in the first track.
       \item A "Tap" button sets the BPM by tapping a button or a key.
-      \item The user-interface can show more than one set at once (multiset), or
-         more patterns in a single set (variset),
-         for example, 8 rows by 8 columns,
-         fulfilling the promise of the project name, \textsl{Sequencer64}.
-      \item The \textsl{event editor} dialog
-         provides viewing and editing of MIDI events as text.
-         This editor is basic, but useful.
-      \item \textsl{Sequencer64} reads SMF 0 MIDI files, splitting
-         the file into patterns based on channel number.
-      \item Additional MIDI controls, such as coarse versus fine BPM control.
-      \item Support for reading \textsl{Cakewalk} "WRK" files.
+      \item Supports more than one visible screen-set (multi-set),
+         or more patterns in a single set (variset).
+      \item The \textsl{event editor}
+         provides basic viewing and editing of MIDI events as text.
+      \item \textsl{Sequencer64} reads SMF 0 MIDI files, split
+         into slots based on channel number.
+      \item Many new MIDI controls, such as coarse versus fine BPM control.
+      \item Support for basic reading (not writing) of
          \index{Cakewalk}
-         No support for writing them, however, and not all features of the
-         "WRK" file are supported.
-      \item Play-list support, with the option to control via MIDI events.
-      \item Some features have been ported from \textsl{Stazed}'s
-         \textsl{Seq32} \cite{seq32} project; they can be disabled at
-         configure/build time (for those who like programming in C++),
-         if desired.
+         \textsl{Cakewalk} "WRK" files.
+      \item Play-list support, with the option to control it via MIDI events.
+      \item Some features ported from \textsl{Stazed}'s
+         \textsl{Seq32} \cite{seq32} project:
          \begin{itemize}
             \item Chord-generation.
             \item Pattern-transposing.
-            \item MIDI song export, which
-               allows a song/performance to be exported into a MIDI file
-               without \textsl{Sequencer64} loops, so that the performance can
-               be played in a standard MIDI sequencer.
-            \item Extended undo/redo support, and more comprehensive detection
-               of changes to the song.
-            \item The ability to split triggers at the nearest snap, instead
-               of splitting them in half.
-            \item Editing the amplitude of data events using a simple
-               low-frequency oscillator (LFO).
+            \item MIDI performance export to a standard MIDI file.
+            \item Extended undo/redo support, better detection of changes.
+            \item Splitting triggers at the nearest snap, if desired.
+            \item Modulating data events with a low-frequency oscillator (LFO).
             \item Enhanced JACK transport support.
-            \item Diverting multi-channel recorded MIDI so that each channel
-               is stored in the sequence/pattern configured for that channel
-            \item \textsl{Seq32} features still pending:
-            \begin{itemize}
-               \item Randomizing MIDI events.
-               \item Selection extensions such as selecting odd/even notes, and
-                  handles on data events.
-            \end{itemize}
+            \item Diverting multi-channel MIDI into into channel-specific slots.
          \end{itemize}
-      \item An optional second song editor window, to have a view
-         of two different parts of a large song while arranging it.
-      \item Set Tempo and Time Signature events are
-         now processed, incorporated into the user-interface, and are saved
-         as standard MIDI data.  Support for System Exclusive events is
-         improving.
-      \item The scale, key, and background sequence
-         settings are now saved to the \textsl{Sequencer64} MIDI file, either
-         globally or per-sequence.
-      \item Each sequence can be colored differently, if desired.  The color
-         from the color palette is saved as part of the pattern data for that
-         sequence.
-      \item In the sequence/pattern and song editors, the piano roll
-         now scrolls to keep up with the progress bar for long patterns.
-      \item Additional mouse and keystroke support in the pattern and song
-         editor windows:
-      \begin{itemize}
-         \item Usage of Page Up, Page Down, and Shift Page Up, Shift Page Down,
-            to move vertically and horizontally in the pattern and song
-            windows.
-         \item Moving selected notes or triggers using the arrow keys.
-         \item Pasting selected notes (and other events) using the arrow and
-            Enter keys.
-         \item Additional keystroke support for entering and exiting "paint"
-            mode.
-         \item Usage of the Mod4 (Super, Windows) key to keep editing
-            (painting) mode enabled after releasing the right mouse button;
-            useful with some "modern" crappy uni-touchpads.
-         \item Shift-left-click on a pattern slot (pattern editor),
-            or on the pattern name or "M" (mute) label (song editor)
-            to toggle the status of all of the other active slots.
-            Useful for listening to a single track by itself.
-         \item Right-click on a the virtual keyboard in the pattern editor
-            toggles between showing letters/octaves (e.g. "C4") versus
-            the MIDI note numbers.  
-      \end{itemize}
-      \item The "user" configuration can now be written to disk (after the
-         first run) with the \texttt{--user-save} option, and 
-         it has many new settings.  It offers the
-         long-standing feature of customizable buss, instrument, and controller
-         information, plus some customizations of the user-interface, such as
-         font, display of the main window's pattern grid, colored and thicker
-         progress bars, modification of the default 40 millisecond window
-         redraw rate, changes in the row and column sizes of a set, and showing
-         multiple sets in the main window.
-      \item Support for mapping MIDI events to a single MIDI buss for testing
-         or simple use cases.
-      \item Support for handling PPQN values other than 192, and for using
-         the PPQN defined in the MIDI file, if desired.
-      \item Small improvements in appearance:
-      \begin{itemize}
-         \item Support for showing empty (having only meta
-            events) sequences in a highlight color (yellow).
-         \item Support for highlighting the currently-focussed pattern editor
-            window, in black-on-cyan if not armed, and in cyan-on-black if
-            armed.  The highlighting appears in both the pattern and song
-            editors.
-         \item Sequences that are shorter than a quarter note are now padded to
-            one full measure, for smoother scrolling on the patterns panel.
-         \item Modification of the colors of the scale and background sequence
-            in the sequence editor to make it easier to see them all.
-         \item A new font, enabled at run time, that is bolder and has an
-            anti-aliased look.
-         \item Clean, solid lines to replace the dotted lines in the piano-roll
-            grids.
-         \item Additional zoom values have been added to support the display
-            of high PPQN sequences.
-         \item An "inverse" or "night" color mode has been added for those
-            who find the glare of all-white windows to be uncomfortable.
-      \end{itemize}
-      \item Consolidated various patches in forks of the \textsl{Seq24}
-         project found by searching the web.  Fixes to bugs found while
-         refactoring \textsl{Seq24} were also made.
+%     \item A second song editor window, to view
+%        two parts of a large performance when arranging it.
+      \item Set Tempo and Time Signature events are handled,
+         shown, and saved as standard MIDI data.
+      \item Scale, key, and background sequences
+         are saved to the \textsl{Sequencer64} MIDI file.
+      \item Pattern coloring, saved in the sequence.
+      \item Piano roll scrolling to keep up with the progress bar.
+      \item Additional mouse and keystroke support for faster editing.
+%     \begin{itemize}
+%        \item Usage of Page Up, Page Down, and Shift Page Up, Shift Page Down,
+%           to move vertically and horizontally in the pattern and song
+%           windows.
+%        \item Moving selected notes or triggers using the arrow keys.
+%        \item Pasting selected notes (and other events) using the arrow and
+%           Enter keys.
+%        \item Additional keystroke support for entering and exiting "paint"
+%           mode.
+%        \item Usage of the Mod4 (Super, Windows) key to keep editing
+%           (painting) mode enabled after releasing the right mouse button;
+%           useful with some "modern" crappy uni-touchpads.
+%        \item Shift-left-click on a pattern slot (pattern editor),
+%           or on the pattern name or "M" (mute) label (song editor)
+%           to toggle the status of all of the other active slots.
+%           Useful for listening to a single track by itself.
+%        \item Right-click on a the virtual keyboard in the pattern editor
+%           toggles between showing letters/octaves (e.g. "C4") versus
+%           the MIDI note numbers.  
+%     \end{itemize}
+      \item The "user" configuration can be saved
+         (\texttt{--user-save} option); it has \textsl{many} new settings.
+%        It offers the
+%        long-standing feature of customizable buss, instrument, and controller
+%        information, plus some customizations of the user-interface, such as
+%        font, display of the main window's pattern grid, colored and thicker
+%        progress bars, modification of the default 40 millisecond window
+%        redraw rate, changes in the row and column sizes of a set, and showing
+%        multiple sets in the main window.
+      \item An option to map events to a single MIDI buss for testing.
+      \item Support for additional PPQN values, including
+         the PPQN of the MIDI file.
+      \item Improvements in appearance, too many to mention here.
+%     \begin{itemize}
+%        \item Support for showing empty (having only meta
+%           events) sequences in a highlight color (yellow).
+%        \item Support for highlighting the currently-focussed pattern editor
+%           window, in black-on-cyan if not armed, and in cyan-on-black if
+%           armed.  The highlighting appears in both the pattern and song
+%           editors.
+%        \item Sequences that are shorter than a quarter note are now padded to
+%           one full measure, for smoother scrolling on the patterns panel.
+%        \item Modification of the colors of the scale and background sequence
+%           in the sequence editor to make it easier to see them all.
+%        \item A new font, enabled at run time, that is bolder and has an
+%           anti-aliased look.
+%        \item Clean, solid lines to replace the dotted lines in the piano-roll
+%           grids.
+%        \item Additional zoom values have been added to support the display
+%           of high PPQN sequences.
+%        \item An "inverse" or "night" color mode has been added for those
+%           who find the glare of all-white windows to be uncomfortable.
+%     \end{itemize}
+      \item Many, many bug fixes, faster than we create them!
+%     \item Consolidated patches in forks of the \textsl{Seq24}
+%        project found by searching the web.  Fixes to bugs found while
+%        refactoring \textsl{Seq24} were also made.
       \item Recording of performance changes into the Song Editor.
-      \item More musical scales (harmonic minor, melodic minor,
-         whole tone, etc.) have been added.
-      \item A pause feature, added to ALSA-mode playback,
-         includes a pause keystroke (".") and a pause button.
-      \item A multiple-set main-window build and run-time option can now
-         show more than one set in the main window.
+      \item More musical scales
+%        (harmonic minor, melodic minor, whole tone, etc.)
+         have been added.
+      \item A pause feature, with a pause key (".") and pause button.
+%     \item A multiple-set main-window build/run-time option
+%        shows more than one set in the main window. (Gtkmm only).
       \item Internal improvements.
       \begin{itemize}
          \item Provided a new, more MIDI-compliant output format for the MIDI
-            files.  The old format can still be read, and, with a "legacy"
-            option, be written.
-         \item Changed the handling of the MIDI event container, which greatly
-            speeds up the loading of a MIDI file.
+            files.
+%           The old format can still be read, and, with a "legacy"
+%           option, be written.
+         \item Reworked the MIDI event container, to
+            speed the loading of a MIDI file.
 %           If the new container reduces the maximum output of the sequencer,
 %           we will dump the slow container into a vector container for faster
 %           playback.
          \item Note-transpose now also works on aftertouch events.
-         \item Non-note events are now copied, moved, or pasted, even if not
-            visible, in the pattern editor.
+         \item Non-note events are copied/moved/pasted in the pattern editor.
 %        \item The code was reformatted using \textsl{astyle} and
 %           personal preferences, and refactored into smaller modules.
-         \item Much documentation was added to the code during reverse
-            engineering.
-         \item Debian packaging is incorporated into the project to make it
-            easier to install without source code.  Bootstrapping and
-            packing scripts were added so that other developers can rebuild the
-            project from scratch easily.
-         \item The Qt 5 version (the future of \textsl{Sequencer64}) for both
-            Linux and Windows can be built using qmake and the mingw compiler.
-         \item The Windows version of \textsl{Sequencer64} provides either a
-            portable zip package or an NSIS-based installer.
+%        \item Much documentation added to the code during reverse
+%           engineering.
+         \item Debian packaging added into the project.
+%           to make it
+%           easier to install without source code.  Bootstrapping and
+%           packing scripts were added so that other developers can rebuild the
+%           project from scratch easily.
+         \item The Qt 5 version (the future of \textsl{Sequencer64}) for
+            Windows is built using Qmake and MingW.
+         \item \textsl{Sequencer64 for Windows} provides a
+            portable zip package and NSIS-based installer.
       \end{itemize}
-      \item New minor features.
-      \begin{itemize}
+%     \item New minor features.
+%     \begin{itemize}
 %        \item The size of the Patterns Panel (main window) is now locked (only
 %        for the Gtkmm-2.4 version).
-         \item A panic button.
-         \item Support for LASH is a run-time or a build option.
-         \item Support for reading and writing configuration files from the
-            user's \texttt{\$HOME/.config/sequencer64} directory, or,
-            optionally, other directories or files.
-      \end{itemize}
+%        \item A panic button.
+%        \item Support for LASH is a run-time or a build option.
+%        \item Support for reading and writing configuration files from the
+%           user's \texttt{\$HOME/.config/sequencer64} directory, or,
+%           optionally, other directories or files.
+%     \end{itemize}
    \end{itemize}
 
 %  We've also been asked to incorporate support for 
@@ -360,12 +332,12 @@
 %  Control), and for NSM (the Non Session Manager).
 %  Still thinking about those.
 
-   One more note.  \textsl{Sequencer64} is extremely customizable, and
-   it features can be configured by defining macro names in the source code,
-   by enabling/disabling options at build-configuration time, and by many new
+   For developers, \textsl{Sequencer64} is extremely customizable via C macros,
+   by enabling/disabling options at build-configuration time, and by many
    command-line arguments.  We cannot show all permutations of settings in this
    document, so don't be surprised if some screenshots don't quite match
-   one's setup.
+   one's setup.  Distro maintainers might pick their favorite build
+   configurations.
 
 \subsection{Document Structure}
 \label{subsec:introduction_document_structure}
@@ -383,7 +355,7 @@
 %  Each tip occurs in a section beginning with "\textbf{Tip:}".
 %  Each tip is provided with an entry in the index, under the
 %  main topic "tips".
-
+%
 %  \textsl{Bug notes}
 %  \index{bugs!documented}
 %  for some of the oddities found in \textsl{Sequencer64} are
@@ -392,13 +364,13 @@
 %  Each bug is provided with an entry in the index, under the
 %  main topic "bugs".  These bugs are items that we will try to
 %  fix as time goes on.
-
+%
 %  \textsl{"To-do" items}
 %  \index{todo!documented}
 %  are also present, again in the same vein.
 %  Each to-do occurs in a sentence beginning with "\textbf{TODO:}".
 %  This document currently has a lot of them!
-
+%
 %  \textsl{"New" items}
 %  \index{new!documented}
 %  are also present, in the same vein.
@@ -409,19 +381,18 @@
 \label{subsec:introduction_lets_get_started}
 
    Let's run \textsl{Sequencer64}!
-   First, make sure one has no other sound application running
+   Make sure no other sound application is running
    (unless one wants to risk blocking \textsl{Sequencer64} or hearing two
-   sounds simultaneously, depending on one's operating system,
-   sound card, and ALSA setup).
-   Then start \textsl{Sequencer64} so that it uses JACK for MIDI.
-   (On \textsl{Windows} just run it; the executable is \texttt{qpseq64.exe}).
+   applications simultaneously, depending on one's operating system,
+   sound card, and audio setup).
+   Start \textsl{Sequencer64} so that it uses JACK for MIDI.
+   On \textsl{Windows} just run it (\texttt{qpseq64.exe}), JACK is not
+   supported on \textsl{Windows}.
    Provide a MIDI file so that all elements of the user-interface can come
-   into play.  Also use the "\&" character so that we get back to the
+   into play.  On \textsl{Linux}, the "\&" character get us back to the
    command-line prompt.  Finally, on our system the main synthesizer
    (\textsl{Yoshimi}) comes up on MIDI buss 5, so we add an option to remap
    all events to that buss:
-
-%  $ sequencer64 --alsa --bus 5 contrib/midi/b4uacuse-seq24.midi &
 
 \begin{verbatim}
    $ seq64 --jack-midi --bus 5 contrib/midi/b4uacuse-seq24.midi &
@@ -429,7 +400,7 @@
 \end{verbatim}
 
    If the \texttt{--alsa} option is used instead of
-   \texttt{--jack-midi}, then the "JACK" button will show "ALSA" instead
+   \texttt{--jack-midi}, then the "JACK" button shows "ALSA" instead
    (Linux 'rtmidi' build only).
 
 \begin{figure}[H]
@@ -453,15 +424,15 @@
    \label{fig:seq64_main_screen_qt}
 \end{figure}
 
-   Then the \textsl{Sequencer64} main window appears, as shown in
+   The \textsl{Sequencer64} main window appears, as shown in
    \figureref{fig:seq64_main_screen} and
    \figureref{fig:seq64_main_screen_qt}.
    These figures have some differences from the \textsl{Seq24} main window
    and from each other, but the functionality is roughly the same.
-   Most of these features can be configured via the "rc" and "user" configuration
-   files or command-line options.
-
-   There are many new front-panel items in \textsl{Sequencer64}:
+   Most features can be configured via the "rc" and "user"
+   configuration files or command-line options.
+   There are many new front-panel items in \textsl{Sequencer64}, but only for
+   the Gtkmm-2.4 version:
 
    \begin{itemize}
       \item Top panel control buttons:
@@ -469,7 +440,7 @@
          \item Toggle and show the status of "Live" mode versus "Song" mode.
          \item Mute/show the mute status of all tracks.
          \item Enable/disable the menu bar and show its status.
-         \item Set/show JACK "Slave" transport, JACK "Master" transport,
+         \item Set/show JACK "Slave" transport, "Master" transport,
             "ALSA" mode, or "JACK" (native JACK) mode.
          \item Set the kind of time display, between "bars:beat:ticks"
             and "hours:minute:seconds".
@@ -481,15 +452,15 @@
       \item Song-recording snap, the \textbf{S} button.
       \item Tap Tempo, the \textbf{0} (zero) button.
       \item Log Tempo, which inserts the current tempo into the tempo track
-         as an event.
+         as an event. Gtkmm-2.4 only.
       \item Tempo recording, which inserts all tempo changes as tempo events.
+         Gtkmm-2.4 only.
       \item Keep-queue toggling and status.
    \end{itemize}
 
    Many (but not all) of these buttons have configurable keystrokes as well.
-   See \sectionref{subsec:seq64_patterns_panel_bottom} for more information.
-
-   Some of these items are not in the Qt interface.  Some might never be!
+   See \sectionref{subsec:seq64_patterns_panel_bottom}.
+   Some of these items are not in the Qt interface.
 
 % This Tip needs to be put elsewhere.
 %
@@ -552,6 +523,10 @@
 % Qt / PortMidi / Windows version
 
 \input{seq64_qt_portmidi}
+
+% Headless version
+
+\input{seq64_headless}
 
 % MIDI implementation chart
 
